Issue #3418963 by saschaeggi, Josue2591, wrd-oaitsd, callinmullaney: CKEditor 5 full screen toolbar overlaps content in Gin theme

--- a/styles/components/ckeditor5.scss
+++ b/styles/components/ckeditor5.scss
@@ -71,6 +71,10 @@
     top: calc(var(--gin-toolbar-y-offset) + var(--gin-sticky-offset)) !important;
   }
 
+  &[data-fullscreen="fullscreeneditor"] .ck-sticky-panel__content.ck-sticky-panel__content_sticky {
+    top: 0 !important;
+  }
+
   .ck-toolbar__separator {
     opacity: .3;
   }
